# EU5ToVic3

./: .clang-tidy  CMakeLists.txt  EU5ToVic3-Installer.iss
.github/workflows/: codeql.yml  find_braces_mismatches.yml  linux_codeql-analysis.yml  publish_commit_id.yml  run_clang_tidy.yml  run_clang_tidy.yml.disable  windows_build_test_and_push.yml
EU5ToVic3/Data_Files/: fronter-configuration.txt
EU5ToVic3/Data_Files/blankMod/output/gfx/portraits/portrait_modifiers/: 01_clothes.txt
EU5ToVic3/Data_Files/configurables/: province_mappings-incomplete-noauto.txt  province_mappings.txt  version.txt  world_supergroups.txt
EU5ToVic3/Data_Files/configurables/eu4tovic3-unused/: province_mappings.txt
EU5ToVic3/Source/: EU5ToVic3Converter.cpp  EU5ToVic3Converter.h  main.cpp
EU5ToVic3/Source/Configuration/: Configuration.cpp  Configuration.h  DatingData.h
EU5ToVic3/Source/EU5World/: World.cpp  World.h
EU5ToVic3/Source/EU5World/CountryManager/: EU5Country.cpp  EU5Country.h  EU5CountryManager.cpp  EU5CountryManager.h
EU5ToVic3/Source/EU5World/Loaders/CommonCountryLoader/: CommonCountryLoader.cpp  CommonCountryLoader.h
EU5ToVic3/Source/EU5World/Loaders/CountryColorLoader/: CommonCountryLoader.cpp  CommonCountryLoader.h
EU5ToVic3/Source/EU5World/Loaders/EU5LocalizationLoader/: EU5LocalizationLoader.cpp  EU5LocalizationLoader.h
EU5ToVic3/Source/EU5World/Loaders/ModLoader/: ModNames.cpp
EU5ToVic3/Source/EU5World/Loaders/NamedColorsLoader/: NamedColorsLoader.cpp  NamedColorsLoader.h
EU5ToVic3/Source/EU5World/ProvinceManager/: EU5Location.cpp  EU5Location.h  ProvinceManager.cpp  ProvinceManager.h
EU5ToVic3/Source/EU5World/RegionManager/: Area.cpp  Area.h  Continent.cpp  Continent.h  Province.cpp  Province.h  Region.cpp  Region.h  RegionManager.cpp  RegionManager.h  SuperRegion.cpp  SuperRegion.h
EU5ToVic3/Source/Mappers/NamedColors/: NamedColorsMapper.cpp  NamedColorsMapper.h
EU5ToVic3/Source/Mappers/SuperGroupMapper/: SuperGroupMapper.cpp  SuperGroupMapper.h  SuperGroupParser.cpp  SuperGroupParser.h
EU5ToVic3/Source/Output/: outWorld.cpp
EU5ToVic3/Source/Output/outMetadataFile/: outMetadataFile.cpp  outMetadataFile.h
EU5ToVic3/Source/V3World/: V3World.cpp  V3World.h
EU5ToVic3Tests/: EU5ToVic3Tests.vcxproj  EU5ToVic3Tests.vcxproj.filters
EU5ToVic3Tests/ConfigurationTests/: ConfigurationTests.cpp
EU5ToVic3Tests/EU5WorldTests/CountryManagerTests/: EU5CountryManagerTests.cpp  EU5CountryTests.cpp
EU5ToVic3Tests/EU5WorldTests/LoaderTests/CommonCountryLoaderTests/: CommonCountryLoaderTests.cpp
EU5ToVic3Tests/EU5WorldTests/LoaderTests/EU5LocalizationLoaderTests/: EU5LocalizationLoaderTests.cpp
EU5ToVic3Tests/EU5WorldTests/LoaderTests/ModLoaderTests/: ModNamesTests.cpp
EU5ToVic3Tests/EU5WorldTests/LoaderTests/NamedColorLoaderTests/: NamedColorLoaderTests.cpp
EU5ToVic3Tests/EU5WorldTests/ProvinceManagerTests/: EU5LocationTests.cpp  ProvinceManagerTests.cpp
EU5ToVic3Tests/EU5WorldTests/RegionManagerTests/: AreaTests.cpp  ContinentTests.cpp  ProvinceTests.cpp  RegionManagerTests.cpp  RegionTests.cpp  SuperRegionTests.cpp
EU5ToVic3Tests/MapperTests/SuperGroupMapperTests/: SuperGroupMapperTests.cpp  SuperGroupParserTests.cpp
EU5ToVic3Tests/TestFiles/eu5installation/: clausewitz_branch.txt
EU5ToVic3lib/: EU5ToVic3lib.vcxproj  EU5ToVic3lib.vcxproj.filters
